@@ -1,6 +1,7 @@
 2002-xx-xx v0.x:
   * Fix handling of timeout where the server prints an error before disconnecting. (Reported by Scott Kay)
   * Fix specifying some default arguments twice. (Fixes gcc 3.1 compile)
+  * Make all STL includes use the new method. (Fixes warnings under gcc 3.1)
 
 2002-05-17 v0.18.2:
   * Work around exception handling segfaults with older versions of gcc by not using multiple inheritance in exception classes. (reported by Waldemar la Tendresse)
